# pydantic_classes_learning

./: 01_validation_type_checking.py  02_default_optional_values.py  main.py  pyproject.toml
