[tool.poetry]
name = "pydantic-classes-learning"
version = "0.1.0"
description = ""
authors = ["soohian <shonendumm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
